# socratic-playground

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/rules/: c-tutor.mdc  rust-tutor.mdc  rust-webgpu-tutor.mdc  socratic-core.mdc
.github/workflows/: c.yml  ci.yml  rust.yml
.pi/: learner.json
.pi/extensions/: socrates-start.ts  socrates-timer.ts
.pi/journal/: sessions.jsonl  status.json
.pi/plans/: rust-rag-learn.md
.pi/timer/: log.jsonl  state.json
c/: AGENTS.md  Makefile  README.md
c-emulator/docs/: EMULATOR.md  TOPICS.md
c-emulator/exercises/: ex03_file.c  ex03_file.h  ex08_run.h  ex10_heap.h  ex11_dynbuf.h
c-emulator/src/: main.c
c-emulator/tests/: ex01_test.c  ex06_test.c  ex07_test.c  ex10_test.c
c/docs/: EMULATOR.md  PROGRESS.md  TOPICS.md
c/exercises/: ex01_bytes.c  ex01_bytes.h  (+14 more)
docs/: AI_LEARNING_WORKFLOW.md  PROGRESS.md  ROADMAP.md  RUST_WARMUP.md  SERVICES.md  SOCRATIC_METHOD.md  STEPS.md  WEEKLY_ROUTINE.md
quantum-learning/: Cargo.toml  EXERCISES.md  README.md
quantum-learning/docs/units/: unit-code-baseline.md  unit-code-hadamard.md  unit-theory-hadamard.md  unit-theory-measurement.md  unit-theory-qubit.md
quantum-learning/src/: lib.rs  main.rs  sim.rs
quantum-learning/src/exercises/: ex01_circuit.rs  ex02_build_gates.rs  ex03_zero_state.rs  ex04_x_gate.rs  ex05_hadamard.rs  mod.rs  tests.rs
rust-rag-learn/: AGENTS.md  Cargo.toml  README.md
rust-webgpu/: AGENTS.md  Cargo.toml  README.md
src/: chunk.rs  embed.rs  lib.rs  main.rs  rust_warmup.rs
test-context-engineering/: README.md  package.json  tsconfig.json
(+33 files in other folders)
