[package]
name = "quantum-learning"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "quantum-learning"
path = "src/main.rs"

[dependencies]
roqoqo = "1.22"
roqoqo-quest = "0.19.0"

# Learn-pi verify command: cargo test
# Goal: coding with quantum computing and qubits (depth: standard)
